# restapi-for-fun

./: .env.example  .gitignore  README.md  TASK.md  docker-compose.yml  pyproject.toml  setup.py
app/: exceptions.py  run.py
app/api_v1/: api_dependencies.py
app/api_v1/auth/: default_permissions.py  dependencies.py  endpoints.py  schemas.py  utils.py
app/api_v1/project/: dependencies.py  endpoints.py
app/cache/: cache_tokens.py
app/cmd/: restapi.py
app/exceptions/: api_exceptions.py  repo_exceptions.py
app/infra/: postgres.py  redis.py
app/models/: __init__.py  base.py  group.py  permission.py  project.py  role.py  user.py
app/models/association_tables/: __init__.py  group_permission.py  group_user.py  project_user.py  role_permission.py  user_join_project_request.py
app/repositories/: group.py  group_permission.py  permission.py  project.py  project_user.py  role.py  user.py
app/settings/: config.py  config_app.py  config_lifespan.py  config_logger.py  lifespan.py  logger_setup.py  postgres.py  redis.py
app/web/api_v1/: api_dependencies.py
app/web/api_v1/auth/: dependencies.py  endpoints.py  utils.py
app/web/api_v1/project/: default_permissions.py  dependencies.py  endpoints.py  schemas.py
